fixing wrapping on speaker page

--- a/app/stylesheets/partials/_page.scss
+++ b/app/stylesheets/partials/_page.scss
@@ -157,7 +157,7 @@ h1 {
     }
     #sidebar-right{
         width:260px;
-		height:450px;
+		height:500px;
         margin-right:60px;
         float:right;
         text-align:right;
